Checking mode select

--- a/data/inner_page/html/index.html
+++ b/data/inner_page/html/index.html
@@ -59,6 +59,14 @@
 
       <input type="range" id="brightness-range" value="0" min="0" max="255"/>
 
+      <select id="standard-select">
+        <option value="n1">Effect 1</option>
+        <option value="n1">Effect 2</option>
+        <option value="n1">Effect 3</option>
+        <option value="n1">Effect 4</option>
+      </select>
+
+
       <div id="input-forms" class="animate" time="0" hidden>
         <h2>Choose mode:</h2>
         <select name="wireless" class="similar-input" id="APlist">
