--- a/data/html/index.html
+++ b/data/html/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>LED controller</title>
-    <script src="../js/wheel.js"></script>
-    <!-- <script src="../js/script.js"></script> -->
+    <script type="module" src="../js/wheel.js"></script>
+    <script type="module" src="../js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="../style/style.css" />
     <link rel="stylesheet" type="text/css" href="../style/menu.css" />
     <link rel="stylesheet" type="text/css" href="../style/wheel.css" />
@@ -22,19 +22,18 @@
           <input type="checkbox" id="active" />
           <label for="active" class="menu-btn"><i class="fa-bars"></i></label>
           <div class="menu-wrapper">
-            <ul>
+            <div id="led-count">
+              <input type="number">
+            </div>
+            <!-- <ul>
               <li><a href="#">Settings</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Feedback</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
-      <!-- <div id="head-text" class="headers">
-        <h1 id="hello" class="animate typing" time="1000" hidden>
-          Wake up, Neo
-        </h1>
-      </div> -->
+
       <div id="color-settings-box" class="settings-block">
         <div id="color-wheel-wrapper">
           <div id="color-wheel-background">
@@ -61,22 +60,10 @@
 
       <div id="effect-settings" class="settings-block">
         <select id="led-mode-select">
-          <option value="n1">Effect 1</option>
-          <option value="n2">Effect 2</option>
-          <option value="n3">Effect 3</option>
-          <option value="n4">Effect 4</option>
+          <option value="0" selected>Simple color</option>
         </select>
 
         <input type="range" id="speed-range" value="0" min="0" max="255" />
-      </div>
-
-      <div id="input-forms" class="animate" time="0" hidden>
-        <h2>Choose mode:</h2>
-        <select name="wireless" class="similar-input" id="APlist">
-          <option selected="selected">MODE></option>
-          <option value="404" id="not-found">Access Point not found</option>
-        </select>
-        <!-- <button id="connect">Set</button> -->
       </div>
     </div>
   </body>
