Add hue tuning in #1 mode

--- a/data/html/index.html
+++ b/data/html/index.html
@@ -22,8 +22,9 @@
           <input type="checkbox" id="active" />
           <label for="active" class="menu-btn"><i class="fa-bars"></i></label>
           <div class="menu-wrapper">
-            <div id="led-count">
-              <input type="number">
+            <div>
+              <h2>Number of LEDs</h2>
+              <input type="number" id="LED-count">
             </div>
             <!-- <ul>
               <li><a href="#">Settings</a></li>
@@ -60,7 +61,7 @@
 
       <div id="effect-settings" class="settings-block">
         <select id="led-mode-select">
-          <option value="0" selected>Simple color</option>
+          <option value=0 selected>Simple color</option>
         </select>
 
         <input type="range" id="speed-range" value="0" min="0" max="255" />
