Fix rewrited effects + add all not rewrited mods

--- a/data/html/index.html
+++ b/data/html/index.html
@@ -60,6 +60,7 @@
       </div>
 
       <div id="effect-settings" class="settings-block">
+        <input type="checkbox" class="toggle" checked>
         <select id="led-mode-select">
           <option value=0 selected>Simple color</option>
         </select>
