add ssid name settings

--- a/data/html/settings.html
+++ b/data/html/settings.html
@@ -23,8 +23,13 @@
     <div id="wrapper">
       <div class="content-area">
         <label for="led-count" class="menu-paragraph input-area">
+          <h3>SSID name</h3>
+          <input type="text" class="setiings-box" id="ssid-name" param_name="ssid-name" param_type="text" />
+          <!-- <p class="upload-file-name color-change" id="code-filename" hidden>code.bin</p> -->
+        </label>
+        <label for="led-count" class="menu-paragraph input-area">
           <h3>LEDs count</h3>
-          <input type="number" class="setiings-box" id="led-count" param_name="led-count" />
+          <input type="number" class="setiings-box" id="led-count" param_name="led-count" param_type="int"/>
           <!-- <p class="upload-file-name color-change" id="code-filename" hidden>code.bin</p> -->
         </label>
       </div>
